--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,14 +1,29 @@
-.home {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    padding-bottom: 8rem;
+.home-logo {
+    font-size: 7rem;
+    margin: 1rem;
 }
 
-.home-logo {
-    font-size: 6rem;
-    margin: 1rem 0rem;
+.ant-layout {
+    height: 100%;
+}
+
+.ant-layout-header {
+    color: white;
+    font-size: 18px;
+}
+
+.ant-layout-footer {
+    line-height: 1.5;
+}
+
+.ant-layout-content {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   flex-grow: 1;
+}
+
+.ant-layout-header, .ant-layout-content, .ant-layout-footer {
+    flex-shrink: 0;
 }
