--- a/src/styles/Show.css
+++ b/src/styles/Show.css
@@ -1,13 +1,17 @@
 .show-data {
     display: flex;
     /* align-items: center; */
+    /* align-content: center; */
     justify-content: space-around;
     /* flex-shrink: 0; */
+    padding: 0rem 4rem;
 }
 
 .portrait-meta {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
 }
 
 .show-title {
@@ -15,4 +19,12 @@
     text-align: center;
     font-size: 2.5rem;
     font-weight: bold;
+}
+
+.episode-list {
+    flex-grow: 3;
+}
+
+.ant-card.ant-card-bordered.ant-card-hoverable {
+    margin: 0 auto;
 }
