--- a/src/styles/Show.css
+++ b/src/styles/Show.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-grow: 1;
+    flex-basis: 33%;
 }
 
 .show-title {
@@ -22,7 +22,7 @@
 }
 
 .episode-list {
-    flex-grow: 3;
+    flex-basis: 66%;
 }
 
 .ant-card.ant-card-bordered.ant-card-hoverable {
