--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,6 +11,9 @@
 .ant-layout-header {
   color: white;
   font-size: 18px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .ant-layout-footer {
