--- a/src/styles/Show.css
+++ b/src/styles/Show.css
@@ -1,30 +1,66 @@
+.show-title {
+    padding: 2.5rem;
+    text-align: center;
+}
+
 .show-data {
     display: flex;
     /* align-items: center; */
     /* align-content: center; */
     justify-content: space-around;
     /* flex-shrink: 0; */
-    padding: 0rem 4rem;
+    padding: 0rem 0rem;
 }
 
 .portrait-meta {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-basis: 33%;
+    flex: 0 0 33%;
+    padding: 0rem 2rem;
 }
 
-.show-title {
-    padding: 2.5rem;
-    text-align: center;
+.description {
+    padding: 0rem 3rem;
 }
 
-.episode-list {
+.collection {
     flex-basis: 66%;
+    display: flex;
+    flex-direction: column;
 }
 
-.ant-card.ant-card-bordered.ant-card-hoverable {
-    margin: 0 auto;
+.seasons-sorting{
+    display: flex;
+    padding-bottom: 1rem;
+}
+
+.seasons {
+    /* position: relative; */
+    flex: 1;
+}
+
+/* .seasons-dropdown{
+    min-width: 12.5rem;
+} */
+
+.sorting {
+    position: relative;
+}
+
+.episodes {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.ant-select {
+    
+}
+
+.ant-card.ant-card-bordered.ant-card-hoverable.episode-card {
+    flex: 0 0 22%;
+    max-width: 22%;
+    margin: 1rem;
 }
 
 /* .show {
